[project]
name = "ParallelTime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "hydra-core==1.3.2",
    "matplotlib==3.9.1",
    "pandas==2.2.3",
    "scikit-learn==1.5.2",
    "setuptools==72.1.0",
    "torch==2.4.0",
    "zetascale==2.7.3",
]
